vlib/v/checker/tests/receiver_unknown_type_single_letter.out
vlib/v/checker/tests/receiver_unknown_type_single_letter.vv:1:7: error: unknown type `Abc`
    1 | fn (p Abc) foo() {}
      |       ~~~
